src/test/resources/acceptance/accept/validIntConstants.ul
boolean bar ()
{
    10;
    105;
    0;
    0000000;
    2147483647; // max int
}
