src/test/resources/reject/compoundAccessOnNonId.ul
boolean bar ()
{
    int[0];
}
